# hello_world

./: .pypirc  Jenkinsfile  LICENSE  setup.cfg
src/: __main__.py
src/hello_world.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
