[metadata]
name = hello_world
version = 0.0.2
author = Boris
author_email = znhv@yandex.com
description = A test project
long_description_content_type = text/markdown
url = https://github.com/znhv/hello_world
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.1

[options.packages.find]
where = src